Fix card wrapping and add effects on links and images

--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ a {
     gap: 16px;
 }
 
+.showcase-text {
+    display: flex;
+    flex-direction: column;
+}
+
 
 .showcase {
     display: flex;
@@ -96,6 +101,14 @@ a {
     flex-wrap: wrap;
 }
 
+#right-cards,
+#left-cards {
+    gap: 64px;
+    display: flex;
+}
+
+
+
 .card img {
     width: 200px;
     height: 200px;
@@ -104,6 +117,12 @@ a {
     border-width: 3px;
     border-radius: 16px;
     border-color: #394F3F;
+
+    transition: transform 0.2s;
+}
+
+.card img:hover {
+    transform: scale(1.05);
 }
 
 .card p {
@@ -112,7 +131,7 @@ a {
 }
 
 
-.quote {
+.quote-container {
     font-weight: 300;
     font-style: italic;
     font-size: 32px;
@@ -124,10 +143,13 @@ a {
     justify-content: center;
     align-items: center;
 
+
     background-color: #B5C9BB;
 }
 
-.quote p {
+.quote {
+    display: flex;
+    flex-direction: column;
     max-width: 800px;
 }
 
@@ -172,10 +194,11 @@ a {
     margin: 0;
 }
 
-.call-to-action a {
+.sign-up-link {
     flex: 0 0 auto;
 
-    margin-left: 24px;
+    width: 60px;
+
     border-style: solid;
     border-width: 2px;
     border-color: #fbfcfb;
@@ -183,7 +206,24 @@ a {
     padding: 4px 32px;
 
     font-weight: bold;
+
+    transition: 0.2s;
 }
+
+.sign-up-link:hover {
+    transform: scale(1.05);
+}
+
+#top-sign-up:hover {
+    background: #fbfcfb;
+    color: #213712;
+}
+
+#bottom-sign-up:hover {
+    background: #fbfcfb;
+    color: #dbaa24;
+}
+
 
 .footer {
     color: #fbfcfb;
